<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.flexganttfx</groupId>
    <artifactId>gantt</artifactId>
    <version>11.12.8</version>
    <packaging>pom</packaging>
    <name>FlexGanttFX</name>
    <description>The parent project for the various FlexGanttFX modules.</description>
    <organization>
        <name>DLSC Software &amp; Consulting GmbH</name>
    </organization>

    <developers>
        <developer>
            <name>Dirk Lemmermann</name>
            <email>dlemmermann@gmail.com</email>
            <organization>DLSC Software &amp; Consulting GmbH</organization>
            <url>http://www.dlsc.com</url>
        </developer>
    </developers>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/senapt/maven-repository</url>
        </repository>
    </distributionManagement>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <javafx.version>21.0.2</javafx.version>
        <controlsfx.version>11.1.1</controlsfx.version>
        <ikonli.version>12.4.0</ikonli.version>
        <atlantafx.version>2.1.0</atlantafx.version>
        <gemsfx.version>3.10.1</gemsfx.version>
        <devtoolsfx.version>1.0.1</devtoolsfx.version>
        <cssfx.version>11.5.1</cssfx.version>
        <maven.javadoc.skip>false</maven.javadoc.skip>
        <jpro.version>2022.1.0</jpro.version>
        <client.plugin.version>0.1.36</client.plugin.version>
        <exec.maven.plugin.version>3.0.0</exec.maven.plugin.version>
        <javafx.maven.plugin.version>0.0.8</javafx.maven.plugin.version>
        <client.maven.plugin.version>0.1.36</client.maven.plugin.version>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <maven.compiler.release>11</maven.compiler.release>
    </properties>

    <modules>
        <module>FlexGanttFXCore</module>
        <module>FlexGanttFXModel</module>
        <module>FlexGanttFXView</module>
        <module>FlexGanttFXExtras</module>
        <module>FlexGanttFXSampler</module>
        <module>FlexGanttFXProject</module>
        <module>FlexGanttFXMSProject</module>
        <module>FlexGanttFXiCal</module>
        <module>FlexGanttFXExperimental</module>
        <module>FlexGanttFXLicensing</module>
        <module>FlexGanttFXEmirates</module>
        <module>FlexGanttFXTutorials</module>
        <module>FlexGanttFXEditor</module>
        <module>FlexGanttFXAssembly</module>
        <module>FlexGanttFXCovid</module>
        <module>FlexGanttFXFactory</module>
        <module>FlexGanttFXDemoLauncher</module>
        <module>FlexGanttFXSpaceMission</module>
        <module>FlexGanttFXAirport</module>
        <module>FlexGanttFXSprint</module>
    </modules>

    <build>
        <plugins>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.2</version>
                <configuration>
                    <forkCount>0</forkCount>
                    <argLine>
                        --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
                    </argLine>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
            </plugin>

            <plugin>
                <groupId>com.google.code.maven-license-plugin</groupId>
                <artifactId>maven-license-plugin</artifactId>
                <version>1.4.0</version>
                <configuration>
                    <header>license-header.txt</header>
                    <includes>
                        <include>**/*.java</include>
                    </includes>
                    <excludes>
                        <exclude>target/**</exclude>
                        <exclude>m2-target/**</exclude>
                        <exclude>**/*.properties</exclude>
                    </excludes>
                    <properties>
                        <name>FlexGanttFX</name>
                        <holder>DLSC Software &amp; Consulting GmbH (dlsc.com)</holder>
                    </properties>
                    <encoding>UTF-8</encoding>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>format</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <verbose>true</verbose>
                    <source>${maven.compiler.source}</source>
                    <show>protected</show>
                    <failOnWarnings>false</failOnWarnings>
                    <release>${maven.compiler.release}</release>
                    <stylesheet>java</stylesheet>

                    <windowtitle>FlexGanttFX ${project.version} API</windowtitle>
                    <detectLinks>false</detectLinks>
                    <links>
                        <link>https://openjfx.io/javadoc/13/</link>
                        <link>https://javadoc.io/doc/org.controlsfx/controlsfx/latest</link>
                    </links>

                    <groups>
                        <group>
                            <title>Core</title>
                            <packages>com.flexganttfx.core*</packages>
                        </group>
                        <group>
                            <title>Model</title>
                            <packages>com.flexganttfx.model*</packages>
                        </group>
                        <group>
                            <title>View</title>
                            <packages>com.flexganttfx.view*</packages>
                        </group>
                        <group>
                            <title>Extras</title>
                            <packages>com.flexganttfx.extras*</packages>
                        </group>
                    </groups>

                    <excludePackageNames>
                        com.flexganttfx.demo.*:com.flexganttfx.project.*:com.flexganttfx.mobile:com.flexganttfx.msproject.*:com.flexganttfx.emirates.*:com.flexganttfx.emirates.*:com.flexganttfx.editor:com.flexganttfx.ical.*:com.flexganttfx.experimental:com.lynden.gmapsfx:impl.com.flexganttfx:com.flexganttfx.tutorial:com.flexganttfx.experimental:com.flexganttfx.msproject:com.flexganttfx.licensing:com.flexganttfx.emirates:com.flexganttfx.demo:com.flexganttfx.project:com.flexganttfx.command:com.flexganttfx.bugs:com.flexganttfx.ical:com.flexganttfx.editor
                    </excludePackageNames>
                    <failOnError>false</failOnError>
                    <docfilessubdirs>true</docfilessubdirs>
                </configuration>
                <executions>
                    <execution>
                        <id>aggregate</id>
                        <phase>package</phase> <!-- bind to the packaging phase -->
                        <goals>
                            <goal>aggregate</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>

    <dependencies>
        <!-- Test Dependencies -->

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.8.1</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>5.8.1</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.testfx</groupId>
            <artifactId>testfx-junit5</artifactId>
            <version>4.0.16-alpha</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-all</artifactId>
            <version>1.3</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-all</artifactId>
            <version>1.10.19</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.testfx</groupId>
            <artifactId>testfx-core</artifactId>
            <version>4.0.16-alpha</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>de.sandec</groupId>
            <artifactId>JMemoryBuddy</artifactId>
            <version>0.2.4</version>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <pluginRepositories>
        <pluginRepository>
            <id>jpro - sandec repository</id>
            <url>https://sandec.jfrog.io/artifactory/repo</url>
        </pluginRepository>
    </pluginRepositories>

    <repositories>
        <repository>
            <id>jpro - sandec repository</id>
            <url>https://sandec.jfrog.io/artifactory/repo</url>
        </repository>
    </repositories>

</project>